# legame

./: CMakeLists.txt  CMakeLists_WIP.txt  Makefile  README.md  SavedData.xml  gameengine  generated.map
assets/: SavedData.xml
assets/levels/: Garden.xml  TheHub.xml
assets/levels/menu/: MainMenu.xml
assets/tilemaps/: debug.map  hub.map  map_editor.map
assets/tilemaps/maps/: debug_large.map  garden.map  hub.map  large_map.map
old_for_reference/: HighNoon.cpp  HighNoon.hpp  main.cpp
old_for_reference/Scenes/: Hub.cpp  Hub.hpp  MapEditor.cpp  MapEditor.hpp  StardewBase.cpp  StardewBase.hpp  StardewTemplate.cpp  StardewTemplate.hpp
old_for_reference/Scenes/Menu/: MainMenu.cpp  MainMenu.hpp  MenuRoot.cpp  MenuRoot.hpp  Options.cpp  Options.hpp
src/: Constants.h  Game.cpp  Game.h  Globals.h  Main.cpp  Types.h
src/AssetStore/: AssetStore.cpp  AssetStore.h
src/Components/: Animation.h  AnimationComponent.h  ArsenalSpell.h  BoxCollider.h  BoxColliderComponent.h  CircleCollider.h  EffectVector.h  Health.h  HealthComponent.h  KeyboardControlled.h  KeyboardControlledComponent.h  LifeTime.h  MainPlayer.h  MainPlayerComponent.h  MenuNavigator.h  Projectile.h  ProjectileComponent.h  ProjectileEmitter.h  ProjectileEmitterComponent.h  RigidBodyComponent.h  SceneSwitcher.h  Sprite.h  SpriteComponent.h  Tags.h  TextLabel.h  TextLabelComponent.h  Transform.h  TransformComponent.h  Velocity.h  VelocityComponent.h
src/Constants/: Constants.h
src/DevTools/: DevTools.cpp  DevTools.h  EntityExplorer.cpp  EntityExplorer.h  LogWindow.h
src/ECS/: ECS.cpp  ECS.h
src/EventBus/: Event.h  EventBus.h
src/Events/: CollisionEvent.h  EventDispatcher.h  KeyPressedEvent.h  KeyReleasedEvent.h  MouseButtonPressedEvent.h  MouseButtonReleasedEvent.h  MouseMotionEvent.h  SceneSwitchEvent.h
src/Game/: Game.cpp  Game.h
src/Logger/: Logger.cpp  Logger.h
src/SceneManager/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
src/Scenes/: Garden.cpp  Garden.h  GenericTopDown.cpp  GenericTopDown.h  Hub.cpp  Hub.h  MapEditor.cpp  MapEditor.cpp_bk  MapEditor.h  Stardew.cpp  Stardew.h  TopDown.cpp  TopDown.h
src/Scenes/Menu/: MainMenu.cpp  MainMenu.h  MenuRoot.cpp  MenuRoot.h
src/Systems/: AnimationSystem.h  CameraMovementSystem.h  CollisionSystem.h  CrosshairSystem.h  DamageSystem.h  KeyboardControlSystem.h  LifeTimeSystem.h  MenuNavigationSystem.h  MovementSystem.h  ProjectileEmitSystem.h  ProjectileLifecycleSystem.h  RenderColliderSystem.h  RenderHealthSystem.h  RenderSystem.h  RenderTextSystem.h  RenderTileMapSystem.h  SpellSystem.h  TriggerSystem.h
src/XMLHandler/: XMLHandler.cpp  XMLHandler.h
